package presentation;

import java.util.List;


public class InvoiceListModel extends Publisher {
    public List<InvoiceListItem> invoices;
}
