package presentation;

public interface Subscriber {
    void update();
}